# basic-rest-api

./: Cargo.toml  README.md
migrations/2022-08-13-141356_users/: up.sql
src/: db.rs  models.rs
