[package]
name = "basic-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_codegen = "0.4.11"
diesel = { version = "1.4.8", features = ["mysql"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.10"
serde = "1.0.143"
serde_derive = "1.0.143"
serde_json = "1.0.83"
custom_derive = "0.1.7"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
